--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="/styles/login.css" rel="stylesheet">
+    <link href="/usersManagament/src/styles/login.css" rel="stylesheet">
     <title>Login</title>
 </head>
 
