--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -4,105 +4,119 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="/usersManagament/src/styles/login.css" rel="stylesheet">
+    <link
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+        crossorigin="anonymous"
+    >
     <title>Login</title>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">JS Begginers</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="#">JS Beginners</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page"
-                        href="/usersManagament/src/pages/login.html">Login</a>
-                    <a class="nav-link" href="/usersManagament/src/pages/registration.html">Registration</a>
-                </div>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/usersManagament/src/pages/login.html">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="/usersManagament/src/pages/registration.html">Registration</a>
+                    </li>
+                </ul>
             </div>
         </div>
     </nav>
     <br>
     <br>
-    <div class="container mt-5">
-        <div class="row justify-content-center">
-            <div class="col-lg-5">
-                <form class="login-form">
+    <div class="container">
+        <div class="row">
+            <div class="col-2"></div>
+            <div class="col-8">
+                <form id="loginForm">
                     <div class="mb-3">
                         <label for="email" class="form-label">Email address</label>
-                        <input type="email" class="form-control" id="email" placeholder="Enter your email"
-                            onfocus="clearPlaceholderEmail()" required>
+                        <input type="email" class="form-control" name="email" id="email" required>
                     </div>
                     <div class="mb-3">
                         <label for="password" class="form-label">Password</label>
-                        <input type="password" class="form-control" id="password" placeholder="Enter your password"
-                            onfocus="clearPlaceholderPass()" required>
+                        <input type="password" minlength="8" class="form-control" name="password" id="password" required>
                     </div>
-                    <div class="row justify-content-center mt-4">
-                        <button type="submit" class="btn btn-primary w-50">Submit</button>
-                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
             </div>
+            <div class="col-2"></div>
         </div>
     </div>
-
+    <script type="text/javascript" src="/usersManagament/src/scripts/users_db_mock.js"></script>
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+        integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
+        crossorigin="anonymous"
+        referrerpolicy="no-referrer"
+    ></script>
     <script type="text/javascript">
         function login() {
+            const users = usersStorage.getAll();
             const email = document.getElementById('email').value;
             const password = document.getElementById('password').value;
-
-            if (!validateLoginForm(email, password)) {
-                alert('Both fields are required');
-                return;
-            }
 
             const foundUser = users.find(user => user.email === email && user.password === password);
 
             if (foundUser) {
-                alert('Successfully logged in!');
+                document.location = '/usersManagament/src/pages/users.html';
                 return;
             }
 
             alert('Login credentials are incorrect!');
         }
 
+        // Call API login endpoint using jQuery
+
+        // function login() {
+        //     const email = document.getElementById('email').value;
+        //     const password = document.getElementById('password').value;
+
+        //     $.ajax({
+        //         url: 'http://localhost:3000/login',
+        //         type: 'POST',
+        //         contentType: 'application/json; charset=utf-8',
+        //         dataType: 'json',
+        //         data: JSON.stringify({
+        //             email: email,
+        //             password: password,
+        //         }),
+        //         success: function (response) {
+        //             alert('Successfully login!');
+        //             setStorageItem('token', response.token);
+        //             document.location = '/usersManagament/src/pages/users.html';
+        //         },
+        //         error: function (error) {
+        //             alert(error.responseText);
+        //         },
+        //     });
+        // }
+
         document.addEventListener('DOMContentLoaded', function () {
-            document.getElementsByClassName('login-form').addEventListener('submit', function (event) {
+            usersStorage.init();
+
+            document.getElementById('loginForm').addEventListener('submit', function (event) {
                 event.preventDefault();
                 login();
             });
         });
-
-        function clearPlaceholderEmail() {
-            document.getElementById('email').removeAttribute('placeholder');
-        }
-
-        function clearPlaceholderPass() {
-            document.getElementById('password').removeAttribute('placeholder');
-        }
-
-        const users = [
-            {
-                email: 'vladTrans@gmail.com',
-                password: 'test1234'
-            },
-            {
-                email: 'igor@gmail.com',
-                password: 'test12345'
-            },
-            {
-                email: 'roma@gmail.com',
-                password: 'test123456'
-            }
-        ];
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    <script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous"
+    ></script>
 </body>
 </html>
