--- a/src/pages/registration.html
+++ b/src/pages/registration.html
@@ -4,151 +4,106 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="/usersManagament/src/styles/login.css" rel="stylesheet">
+    <link
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+        crossorigin="anonymous"
+    >
     <title>Login</title>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">JS Begginers</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="#">JS Beginners</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page"
-                        href="/usersManagament/src/pages/login.html">Login</a>
-                    <a class="nav-link" href="/usersManagament/src/pages/registration.html">Registration</a>
-                </div>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="#" onclick="redirectToLoginPage()">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/usersManagament/src/pages/registration.html">Registration</a>
+                    </li>
+                </ul>
             </div>
         </div>
     </nav>
     <br>
     <br>
-    <div class="container mt-5">
-        <div class="row justify-content-center">
-            <div class="col-lg-5">
-                <form class="login-form">
+    <div class="container">
+        <div class="row">
+            <div class="col-2"></div>
+            <div class="col-8">
+                <form id="registrationForm">
                     <div class="mb-3">
-                        <label for="firstName" class="form-label">First Name</label>
-                        <input type="firstName" class="form-control" id="firstName" placeholder="Enter your First Name"
-                            onfocus="clearPlaceholder(this)" required>
+                        <label for="newFirstName" class="form-label">First Name</label>
+                        <input type="text" class="form-control" id="firstName" required>
                     </div>
                     <div class="mb-3">
-                        <label for="secondName" class="form-label">Second Name</label>
-                        <input type="secondName" class="form-control" id="secondName"
-                            placeholder="Enter your Second Name" onfocus="clearPlaceholder(this)" required>
+                        <label for="newlastName" class="form-label">Last Name</label>
+                        <input type="text" class="form-control" id="lastName" required>
                     </div>
                     <div class="mb-3">
-                        <label for="email" class="form-label">Email address</label>
-                        <input type="email" class="form-control" id="email" placeholder="Enter your email"
-                            onfocus="clearPlaceholder(this)" required>
+                        <label for="newEmail" class="form-label">Email</label>
+                        <input type="email" class="form-control" id="email" required>
                     </div>
                     <div class="mb-3">
-                        <label for="phone" class="form-label">Phone number</label>
-                        <input type="phone" class="form-control" id="phone" placeholder="Enter your phone number"
-                            onfocus="clearPlaceholder(this)" required>
+                        <label for="newPhone" class="form-label">Phone</label>
+                        <input type="text" class="form-control" id="phone" required>
                     </div>
                     <div class="mb-3">
                         <label for="password" class="form-label">Password</label>
-                        <input type="password" class="form-control" id="password" minlength="8"
-                            placeholder="Enter your password" onfocus="clearPlaceholder(this)" required>
+                        <input type="password" class="form-control" id="password" minlength="8" required>
                     </div>
                     <div class="mb-3">
-                        <label for="confirmPassword" class="form-label">Confirm Password</label>
-                        <input type="password" class="form-control" id="confirmPassword" minlength="8"
-                            placeholder="Confirm Password" onfocus="clearPlaceholder(this)" required>
+                        <label for="passwordConfirmation" class="form-label">Password Confirmation</label>
+                        <input type="password" class="form-control" id="passwordConfirmation" minlength="8" required>
                     </div>
-                    <div class="row justify-content-center mt-4">
-                        <button type="submit" class="btn btn-primary w-50">Submit</button>
-                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
             </div>
+            <div class="col-2"></div>
         </div>
     </div>
-
+    <script type="text/javascript" src="/usersManagament/src/scripts/passwords.js"></script>
+    <script type="text/javascript" src="/usersManagament/src/scripts/redirections.js"></script>
+    <script type="text/javascript" src="/usersManagament/src/scripts/users_db_mock.js"></script>
     <script type="text/javascript">
-        function validatePasswords() {
-            const password = document.getElementById('password').value;
-            const confirmPssword = document.getElementById('confirmPassword').value;
+        function register() {
+            usersStorage.add({
+                firstName: document.getElementById('firstName').value,
+                lastName: document.getElementById('lastName').value,
+                email: document.getElementById('email').value,
+                phone: document.getElementById('phone').value,
+                password:  document.getElementById('password').value,
+            });
 
-            return password === confirmPssword;
+            document.location = '/usersManagament/src/pages/users.html';
         }
 
         document.addEventListener('DOMContentLoaded', function () {
-            document.getElementsByClassName('login-form')[0].addEventListener('submit', function (event) {
-                console.log(1);
+            usersStorage.init();
+
+            document.getElementById('registrationForm').addEventListener('submit', function (event) {
                 event.preventDefault();
-                if (!validatePasswords()) {
-                    alert('Passwords must be the same');
+                if (!validatePasswordAndConfirmation()) {
                     return;
                 }
 
-                // новий юзер
-                const firstName = document.getElementById('firstName').value;
-                const secondName = document.getElementById('secondName').value;
-                const email = document.getElementById('email').value;
-                const phone = document.getElementById('phone').value;
-                const password = document.getElementById('password').value;
-
-                const newUser = {
-                    firstName: firstName,
-                    secondName: secondName,
-                    email: email,
-                    phone: phone,
-                    password: password
-                };
-
-                users.push(newUser);
-
-                alert('Registration successful!');
-
-                // перезавантажуємо форму після збереження юзера
-                document.getElementsByClassName('login-form')[0].reset();
-            });
-
-            const formElements = document.querySelectorAll('form.login-form input');
-            console.log(formElements);
-
-            // пробігтися циклом по всіх елементах і кожному дадати прослуховувач події focus, і використати функцію clearPlaceholder
-            formElements.forEach(function (element) {
-                element.dataset.placeholder = element.placeholder;
-
-                element.addEventListener('focus', function () { // текст прибирається
-                    clearPlaceholder(this);
-                });
-                element.addEventListener('blur', function () {
-                    element.placeholder = element.dataset.placeholder; // текст з'являється
-                });
+                register();
             });
         });
-
-        function clearPlaceholder(element) {
-            document.getElementById(element.id).removeAttribute('placeholder');
-        }
-
-        const users = [
-            {
-                email: 'vladTrans@gmail.com',
-                password: 'test1234'
-            },
-            {
-                email: 'igor@gmail.com',
-                password: 'test12345'
-            },
-            {
-                email: 'roma@gmail.com',
-                password: 'test123456'
-            }
-        ];
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    <script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous"
+    ></script>
 </body>
-
 </html>
