--- a/src/pages/registration.html
+++ b/src/pages/registration.html
@@ -4,12 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-        crossorigin="anonymous"
-    >
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Login</title>
 </head>
 
@@ -28,7 +24,11 @@
                         <a class="nav-link" aria-current="page" href="#" onclick="redirectToLoginPage()">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/usersManagament/src/pages/registration.html">Registration</a>
+                        <a
+                            class="nav-link active"
+                            aria-current="page"
+                            href="/usersManagament/src/pages/registration.html"
+                        >Registration</a>
                     </li>
                 </ul>
             </div>
@@ -55,7 +55,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="newPhone" class="form-label">Phone</label>
-                        <input type="text" class="form-control" id="phone" required>
+                        <input type="text" class="form-control phoneMask" id="phone" required>
                     </div>
                     <div class="mb-3">
                         <label for="password" class="form-label">Password</label>
@@ -71,39 +71,53 @@
             <div class="col-2"></div>
         </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+        integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/5.0.7/jquery.inputmask.min.js"></script>
+    <script type="text/javascript" src="/usersManagament/src/scripts/constants.js"></script>
     <script type="text/javascript" src="/usersManagament/src/scripts/passwords.js"></script>
     <script type="text/javascript" src="/usersManagament/src/scripts/redirections.js"></script>
-    <script type="text/javascript" src="/usersManagament/src/scripts/users_db_mock.js"></script>
+    <script type="text/javascript" src="/usersManagament/src/scripts/phone_mask.js"></script>
     <script type="text/javascript">
         function register() {
-            usersStorage.add({
-                firstName: document.getElementById('firstName').value,
-                lastName: document.getElementById('lastName').value,
-                email: document.getElementById('email').value,
-                phone: document.getElementById('phone').value,
-                password:  document.getElementById('password').value,
-            });
+            if (!validatePasswordAndConfirmation()) {
+                return;
+            }
 
-            document.location = '/usersManagament/src/pages/users.html';
+            $.ajax({
+                url: `${apiHost}/register`,
+                type: 'POST',
+                contentType: 'application/json; charset=utf-8',
+                dataType: 'json',
+                data: JSON.stringify({
+                    email: $('#email').val(),
+                    password: $('#password').val(),
+                    firstName: $('#firstName').val(),
+                    lastName: $('#lastName').val(),
+                    phone: $('#phone').val(),
+                }),
+                success: function (response) {
+                    alert('Successfully registration!');
+                    redirectToLoginPage();
+                },
+                error: function (error) {
+                    console.log(error);
+                },
+            });
         }
 
-        document.addEventListener('DOMContentLoaded', function () {
-            usersStorage.init();
-
-            document.getElementById('registrationForm').addEventListener('submit', function (event) {
+        $(document).ready(function () {
+            $('#registrationForm').submit(function (event) {
                 event.preventDefault();
-                if (!validatePasswordAndConfirmation()) {
-                    return;
-                }
-
                 register();
             });
         });
     </script>
-    <script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"
-    ></script>
+
 </body>
+
 </html>
