--- a/src/pages/registration.html
+++ b/src/pages/registration.html
@@ -78,10 +78,12 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/5.0.7/jquery.inputmask.min.js"></script>
+    <script type="text/javascript" src="/usersManagament/src/scripts/token_storage.js"></script>
     <script type="text/javascript" src="/usersManagament/src/scripts/constants.js"></script>
     <script type="text/javascript" src="/usersManagament/src/scripts/passwords.js"></script>
     <script type="text/javascript" src="/usersManagament/src/scripts/redirections.js"></script>
     <script type="text/javascript" src="/usersManagament/src/scripts/phone_mask.js"></script>
+    <script type="text/javascript" src="/usersManagament/src/scripts/check_autorized_user.js"></script>
     <script type="text/javascript">
         function register() {
             if (!validatePasswordAndConfirmation()) {
