--- a/src/pages/registration.html
+++ b/src/pages/registration.html
@@ -24,11 +24,8 @@
                         <a class="nav-link" aria-current="page" href="#" onclick="redirectToLoginPage()">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a
-                            class="nav-link active"
-                            aria-current="page"
-                            href="/usersManagament/src/pages/registration.html"
-                        >Registration</a>
+                        <a class="nav-link active" aria-current="page"
+                            href="/usersManagament/src/pages/registration.html">Registration</a>
                     </li>
                 </ul>
             </div>
@@ -84,38 +81,33 @@
     <script type="text/javascript" src="/usersManagament/src/scripts/redirections.js"></script>
     <script type="text/javascript" src="/usersManagament/src/scripts/phone_mask.js"></script>
     <script type="text/javascript" src="/usersManagament/src/scripts/check_autorized_user.js"></script>
+    <script type="text/javascript" src="/usersManagament/src/scripts/add_user.js"></script>
     <script type="text/javascript">
-        function register() {
-            if (!validatePasswordAndConfirmation()) {
-                return;
-            }
+        $(document).ready(function () {
+            $('#registrationForm').submit(function (event) {
+                event.preventDefault();
+                if (!validatePasswordAndConfirmation()) {
+                    return;
+                }
 
-            $.ajax({
-                url: `${apiHost}/register`,
-                type: 'POST',
-                contentType: 'application/json; charset=utf-8',
-                dataType: 'json',
-                data: JSON.stringify({
+                const userData = {
                     email: $('#email').val(),
                     password: $('#password').val(),
                     firstName: $('#firstName').val(),
                     lastName: $('#lastName').val(),
                     phone: $('#phone').val(),
-                }),
-                success: function (response) {
+                };
+
+                const successRegistration = function (response) {
                     alert('Successfully registration!');
                     redirectToLoginPage();
-                },
-                error: function (error) {
-                    console.log(error);
-                },
-            });
-        }
+                };
 
-        $(document).ready(function () {
-            $('#registrationForm').submit(function (event) {
-                event.preventDefault();
-                register();
+                const errorRegistration = function (error) {
+                    console.log(error);
+                };
+
+                addUser(userData, successRegistration, errorRegistration);
             });
         });
     </script>
