--- a/src/pages/registration.html
+++ b/src/pages/registration.html
@@ -40,27 +40,27 @@
                 <form id="registrationForm">
                     <div class="mb-3">
                         <label for="newFirstName" class="form-label">First Name</label>
-                        <input type="text" class="form-control" id="firstName" required>
+                        <input type="text" class="form-control" id="firstName" name="firstName" required>
                     </div>
                     <div class="mb-3">
                         <label for="newlastName" class="form-label">Last Name</label>
-                        <input type="text" class="form-control" id="lastName" required>
+                        <input type="text" class="form-control" id="lastName" name="lastName" required>
                     </div>
                     <div class="mb-3">
                         <label for="newEmail" class="form-label">Email</label>
-                        <input type="email" class="form-control" id="email" required>
+                        <input type="email" class="form-control" id="email" name="email" required>
                     </div>
                     <div class="mb-3">
                         <label for="newPhone" class="form-label">Phone</label>
-                        <input type="text" class="form-control phoneMask" id="phone" required>
+                        <input type="text" class="form-control phoneMask" id="phone" name="phone" required>
                     </div>
                     <div class="mb-3">
                         <label for="password" class="form-label">Password</label>
-                        <input type="password" class="form-control" id="password" minlength="8" required>
+                        <input type="password" class="form-control" id="password" minlength="8" name="password" required>
                     </div>
                     <div class="mb-3">
                         <label for="passwordConfirmation" class="form-label">Password Confirmation</label>
-                        <input type="password" class="form-control" id="passwordConfirmation" minlength="8" required>
+                        <input type="password" class="form-control" id="passwordConfirmation" minlength="8" name="passwordConfirmation" required>
                     </div>
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </form>
@@ -82,6 +82,7 @@
     <script type="text/javascript" src="/usersManagament/src/scripts/phone_mask.js"></script>
     <script type="text/javascript" src="/usersManagament/src/scripts/check_autorized_user.js"></script>
     <script type="text/javascript" src="/usersManagament/src/scripts/add_user.js"></script>
+    <script type="text/javascript" src="/usersManagament/src/scripts/form_validation.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
             $('#registrationForm').submit(function (event) {
@@ -104,7 +105,7 @@
                 };
 
                 const errorRegistration = function (error) {
-                    console.log(error);
+                    displayFormErrors(error.responseJSON, '#registrationForm');
                 };
 
                 addUser(userData, successRegistration, errorRegistration);
